--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 'Brighton Japan Festival'
 permalink: none
-url: 'http://beta.abemedia.co.uk/badymanagement'
+url: 'http://beta.abemedia.co.uk/badymanagement/'
 timezone: Europe/London
 exclude:
     - Gemfile
