--- a/_config.yml
+++ b/_config.yml
@@ -55,4 +55,4 @@ description: '10K Boxing'
 relative_permalinks: 'false'
 v: 1
 baseurl: /
-cdn: //cdn.donlabs.com/badymanagement/0x0/
+cdn: //cdn.donlabs.com/0x0/badymanagement/
