squash! Merge branch 'gh-pages' of https://github.com/abeta/badymanagement into gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: '10K Boxing'
 permalink: none
-url: 'http://10kboxing.com'
+url: 'http://beta.abemedia.co.uk/10kboxing'
 timezone: Europe/London
 exclude:
     - Gemfile
