squash! Create _team/candice-f.html

--- a/_system/system.yml
+++ b/_system/system.yml
@@ -4,9 +4,9 @@ content:
 gallery:
     title: Gallery
     icon: camera
-team:
+fighters:
     title: Fighters
     icon: users
-team:
+models:
     title: Models
     icon: users
