squash! Update _content/fighters.html

--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,10 @@ collections:
     content:
         output: true
         permalink: ':path.html'
-    team:
+    fighters:
+        output: true
+        permalink: ':path.html'
+    models:
         output: true
         permalink: ':path.html'
     gallery:
