--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ profiles:
     twitter: 'https://twitter.com/10kboxing'
     pinterest: 'https://pinterest.com/brightonjapan'
     youtube: 'https://youtube.com/10kboxing'
-    instagram: 'https://instagram.com/10kboxing'
+    instagram: 'https://instagram.com/badytouray'
 defaults:
     -
         scope:
